--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "homepage": "https://github.com/FreshworksStudio/react-python-starter#readme",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.15.1"
   }
 }
