--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,15 @@
     "build": "webpack --config-name=prod",
     "format": "prettier --config .prettierrc.json --write './**/*.js'",
     "lint": "eslint .",
-    "start": "webpack-dev-server --config-name=dev"
+    "start": "webpack-dev-server --config-name=dev",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.3",
@@ -25,6 +27,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.15.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.12.10",
     "webpack": "^4.39.1",
