--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --config .prettierrc.json --write './**/*.js'",
     "lint": "eslint .",
     "start": "webpack-dev-server --config-name=dev",
-    "test": "jest"
+    "test": "jest --env=jsdom",
+    "test:update": "jest --env=jsdom --updateSnapshot"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,13 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.2",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.15.1",
     "html-webpack-plugin": "^3.2.0",
@@ -38,5 +43,19 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.2"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost",
+    "testEnvironment": "jest-environment-jsdom-global",
+    "setupFiles": [
+      "./tests/setup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
