--- a/.github/workflows/pull-request-client.yml
+++ b/.github/workflows/pull-request-client.yml
@@ -10,10 +10,10 @@ jobs:
         run: docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag freshworksstudio/react-python-starter:${{ GITHUB_REF }}
+        run: docker build . --file Dockerfile --tag freshworksstudio/react-python-starter:${GITHUB_REF:11}
 
       - name: Push to docker hub
-        run: docker push freshworksstudio/react-python-starter:${{ GITHUB_REF }}
+        run: docker push freshworksstudio/react-python-starter:${GITHUB_REF:11}
 
   test:
     runs-on: ubuntu-latest
@@ -21,4 +21,4 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Run tests inside docker container
-        run: docker run freshworksstudio/react-python-starter:${{ GITHUB_REF }} "npm run test"
+        run: docker run freshworksstudio/react-python-starter:${GITHUB_REF:11} "npm run test"
