--- a/.github/workflows/pull-request-client.yml
+++ b/.github/workflows/pull-request-client.yml
@@ -10,7 +10,7 @@ jobs:
         run: docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag freshworksstudio/react-python-starter:"${GITHUB_SHA}"
+        run: docker build client --file client/Dockerfile --tag freshworksstudio/react-python-starter:"${GITHUB_SHA}"
 
       - name: Push to docker hub
         run: docker push freshworksstudio/react-python-starter:"${GITHUB_SHA}"
