--- a/.github/workflows/pull-request-client.yml
+++ b/.github/workflows/pull-request-client.yml
@@ -21,4 +21,4 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Run tests inside docker container
-        run: docker run freshworksstudio/react-python-starter:"${GITHUB_SHA}" "npm run test"
+        run: docker run freshworksstudio/react-python-starter:"${GITHUB_SHA}" "npm" "run test"
