--- a/.github/workflows/merge-to-master.yml
+++ b/.github/workflows/merge-to-master.yml
@@ -12,10 +12,10 @@ jobs:
         run: docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build the Client Docker image
-        run: docker build client --file client/Dockerfile --tag ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:"${GITHUB_SHA}"
+        run: docker build client --file client/Dockerfile --tag ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:latest
 
       - name: Push the Client image to docker hub
-        run: docker push ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:"${GITHUB_SHA}"
+        run: docker push ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -29,6 +29,6 @@ jobs:
         with:
           args: >
             --user 'ec2-user'
-            --script 'sudo docker pull ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:"${GITHUB_SHA}"'
+            --script 'sudo docker pull ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:latest
             --script 'sudo docker rm -f client || true'
-            --script 'sudo docker run -d -p 80:3000 --name client ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:"${GITHUB_SHA}"'
+            --script 'sudo docker run -d -p 80:3000 --name client ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:latest'
