--- a/.github/workflows/merge-to-master.yml
+++ b/.github/workflows/merge-to-master.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Push the Client image to docker hub
         run: docker push ${{ secrets.DOCKER_HUB_CLIENT_REPO }}:latest
 
-  deploy:
+  deploy-client:
     runs-on: ubuntu-latest
     needs: build-client
     steps:
