--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,6 @@
-Flask==1.0.2
-Flask-Testing==0.6.2
-Flask-SQLAlchemy==2.3.2
-psycopg2==2.7.4
-flask-cors==3.0.6
+Flask==1.1.1
+Flask-Testing==0.7.1
+Flask-SQLAlchemy==2.4.0
+psycopg2==2.8.3
+psycopg2-binary==2.8.3
+flask-cors==3.0.8
