Revert Jenkinsfile and update Github actions
If I've done this properly, the Github actions pipeline will now clone
the client submodule before running the rest of the actions. The other
actions should still be processed in parallel.

--- a/.github/workflows/pull-request-unit-test.yml
+++ b/.github/workflows/pull-request-unit-test.yml
@@ -2,9 +2,17 @@ name: Run Unit tests
 on: [pull_request]
 
 jobs:
+  update-submodules:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Update submodules
+        run: make update-submodules
+
   test-client:
     runs-on: ubuntu-latest
     steps:
+      - needs: update-submodules
       - uses: actions/checkout@v1
       - name: Run unit tests for client
         run: make client-test
@@ -12,6 +20,7 @@ jobs:
   test-server:
     runs-on: ubuntu-latest
     steps:
+      - needs: update-submodules
       - uses: actions/checkout@v1
       - name: Run unit tests for server
         run: make server-test
