--- a/.github/workflows/pull-request-unit-test.yml
+++ b/.github/workflows/pull-request-unit-test.yml
@@ -11,16 +11,16 @@ jobs:
 
   test-client:
     runs-on: ubuntu-latest
+    needs: update-submodules
     steps:
-      - needs: update-submodules
       - uses: actions/checkout@v1
       - name: Run unit tests for client
         run: make client-test
 
   test-server:
     runs-on: ubuntu-latest
+    needs: update-submodules
     steps:
-      - needs: update-submodules
       - uses: actions/checkout@v1
       - name: Run unit tests for server
         run: make server-test
