POC e2e tests (no seed data)
Goal: Validate that the FE & BE are up-and-running together

Process:
Navigate to a route that displays pre-seeded data from the API

This confirms:
- That the API is running (can be built successfully)
- That the FE is running (can be built successfully)
- That the FE is successfully hitting the API (the FE/BE have not departed)

--- a/.github/workflows/pull-request-unit-test.yml
+++ b/.github/workflows/pull-request-unit-test.yml
@@ -17,3 +17,14 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run unit tests for server
         run: make server-test
+
+  test-app:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Update submodules
+        run: make update-submodules
+      - name: Start App
+        run: make run
+      - name: Run e2e tests
+        run: npm test
