Install e2e dependencies before running tests

--- a/.github/workflows/pull-request-unit-test.yml
+++ b/.github/workflows/pull-request-unit-test.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Start App
         run: make run
       - name: Run e2e tests
-        run: npm test
+        run: npm ci && npm test
