--- a/.github/workflows/pull-request-unit-test.yml
+++ b/.github/workflows/pull-request-unit-test.yml
@@ -26,5 +26,7 @@ jobs:
         run: make update-submodules
       - name: Start App
         run: make run
+      - name: Give server time to start
+        run: sleep 5
       - name: Run e2e tests
         run: npm ci && npm test
