--- a/.github/workflows/pull-request-unit-test.yml
+++ b/.github/workflows/pull-request-unit-test.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Start App
         run: make run
       - name: Give server time to start
-        run: sleep 5
+        run: sleep 15
+      - name: Hit server
+        run: curl http://localhost:5000/api/foo
       - name: Run e2e tests
         run: npm ci && npm test
